fix scrolling on mobile menu

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -22,10 +22,13 @@ main {
     box-sizing: border-box;
 }
 
-.overflow-hidden {
-    overflow: hidden;
-}
-
 .hidden {
     display: none;
+}
+
+html.overflow-hidden,
+body.overflow-hidden {
+    overflow: hidden;
+    position: fixed;
+    width: 100%;
 }
